# remote-gyro-plugin-pkgs

./: CMakeLists.txt  LICENSE.LGPLv2.1  NOTICE  README.md
debian/: changelog  control  rules  sf-plugin-gyro-emul-pkgs.install.in  sf-plugin-gyro-emul-pkgs.postinst.in
packaging/: sf-plugin-gyro-emul-pkgs.spec
processor/: CMakeLists.txt  tags
processor/include/: gyro_sim_processor.h
processor/src/: .gyro_sim_processor.cpp.swp  gyro_sim_processor.cpp  tags
sensor/: CMakeLists.txt  tags
sensor/include/: cgyro_sim.h  l3g4200d.h
sensor/src/: cgyro_sim.cpp  tags
